--- a/layout-28/css/28-style.css
+++ b/layout-28/css/28-style.css
@@ -16,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  width: 70vw;
+  width: 700px;
   height: 700px;
   position: relative;
 }
@@ -26,9 +26,9 @@
   background-color: #c4c4c4;
 }
 #root > #box > div:nth-child(1) {
-  width: 40vw;
-  height: 40vw;
-  border-radius: 30vw;
+  width: 350px;
+  height: 350px;
+  border-radius: 200px;
   background-color: rgba(255, 102, 102, 0.5);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
