--- a/layout-28/css/28-style.scss
+++ b/layout-28/css/28-style.scss
@@ -13,7 +13,7 @@
 
   & > #box {
     @include flex(space-between, center, row);
-    width: 70vw; height: 700px;
+    width: 700px; height: 700px;
     position: relative;
 
     & > div {
@@ -22,8 +22,8 @@
     }
 
     & > div:nth-child(1) {
-      width: 40vw; height: 40vw;
-      border-radius: 30vw;
+      width: 350px; height: 350px;
+      border-radius: 200px;
       background-color: rgba(255, 102, 102, 0.5);
       backdrop-filter: blur(5px);
       // blur 30px을 하면 뒷배경이 아예 안보여서 5px정도만 해줌
